[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tertimuss"
version = "1.1.3"
description = ""
authors = ["AbelChT"]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8"
scipy = "~1.6.0"
matplotlib = "~3.3.3"
ortools = "~8.1.8487" # ortools = "7.8.7959"
