[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tertimuss"
version = "1.1.3"
description = ""
authors = ["AbelChT"]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8"
scipy = "~1.6.2"
matplotlib = "~3.4.1"
ortools = "~8.2.8487" # ortools = "7.8.7959"
