[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tertimuss"
version = "1.2.1"
description = ""
authors = ["AbelChT"]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8"
scipy = "~1.6.2"
matplotlib = "~3.4.1"
ortools = "~9.4.1874"
packaging = "~21.3"
